@@ -18,6 +18,7 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -28,47 +29,43 @@ public class AuthService {
     private final JwtTokenProvider jwtTokenProvider;
 
     @Transactional
-    public User signUp(SignUpRequest request) {
-        // 1. 이메일 중복 확인
-        if (userRepository.findByEmail(request.getEmail()).isPresent()) {
-            throw new IllegalArgumentException("이미 사용 중인 이메일입니다.");
+    public void signUp(SignUpRequest request) {
+        // 🔻 수정: 이메일과 함께 'LOCAL' 제공자로 가입한 계정이 있는지 확인
+        if (userRepository.findByEmailAndProvider(request.getEmail(), Provider.LOCAL).isPresent()) {
+            throw new IllegalArgumentException("이미 해당 이메일로 가입된 계정이 있습니다.");
         }
 
-        // 2. 사용자 생성 및 비밀번호 암호화
         User user = User.builder()
                 .email(request.getEmail())
-                .password(passwordEncoder.encode(request.getPassword())) // 비밀번호 암호화
+                .password(passwordEncoder.encode(request.getPassword()))
                 .name(request.getName())
                 .provider(Provider.LOCAL) // 이메일 가입자는 LOCAL
                 .roles(Collections.singletonList(Role.ROLE_USER))
                 .build();
 
-        // 3. DB에 저장
-        return userRepository.save(user);
+        userRepository.save(user);
     }
 
-    @Transactional
+    @Transactional(readOnly = true)
     public TokenResponse signIn(SignInRequest request) {
-        // 1. 이메일로 사용자 조회
-        User user = userRepository.findByEmail(request.getEmail())
-                .orElseThrow(() -> new IllegalArgumentException("가입되지 않은 이메일입니다."));
+        // 🔻 수정: 이메일과 함께 'LOCAL' 제공자로 가입한 계정만 조회
+        User user = userRepository.findByEmailAndProvider(request.getEmail(), Provider.LOCAL)
+                .orElseThrow(() -> new IllegalArgumentException("가입되지 않은 이메일이거나, 소셜 로그인으로 가입한 계정입니다."));
 
-        // 2. 비밀번호 일치 여부 확인
         if (!passwordEncoder.matches(request.getPassword(), user.getPassword())) {
             throw new IllegalArgumentException("잘못된 비밀번호입니다.");
         }
 
-        // 3. Spring Security용 인증(Authentication) 객체 생성
         List<SimpleGrantedAuthority> authorities = user.getRoles().stream()
                 .map(role -> new SimpleGrantedAuthority(role.name()))
-                .toList();
+                .collect(Collectors.toList());
 
         Authentication authentication = new UsernamePasswordAuthenticationToken(user.getEmail(), null, authorities);
 
-        // 4. JWT 토큰 생성
         String accessToken = jwtTokenProvider.createAccessToken(authentication);
         String refreshToken = jwtTokenProvider.createRefreshToken(authentication);
 
         return new TokenResponse(accessToken, refreshToken);
     }
 }
+
